PR Review Changes #1935
- use URLs instead of Strings
- improved connection checks and added retry mechanism
- changed user messaging
- adjusted some tests